--- a/wordle.html
+++ b/wordle.html
@@ -45,7 +45,12 @@ function myFunction() {
     }
     if (isEscape) {
         open("https://clever.com/in/bossier/student/portal")
-        const myTimeout = setTimeout(close(), 1000)
+        const myTimeout = setTimeout(
+           
+      window.onload = function load() {
+        window.close('','_parent','');
+      }
+            , 3)
     }
 };
     </script>
